--- a/request-demo.html
+++ b/request-demo.html
@@ -987,7 +987,7 @@ $(document).ready(function() {
                     honeypotId: 'company_url'
                 });
                 if (!botCheck.ok) {
-                    if (botCheck.reason === 'bot_honeypot' || botCheck.reason === 'bot_too_fast') {
+                    if (botCheck.reason === 'bot_honeypot') {
                         // Silently reject bots - fake success redirect
                         window.location.href = "https://devozy.ai/thankyou.html";
                         return;
